syntax = "proto3";

option java_multiple_files = true;
package communication;
import "google/protobuf/timestamp.proto";
import "model.proto";

service AccommodationService {
  rpc findAllByUser(UserId) returns (ListAccommodation);
  rpc addAccommodation(AccommodationFull) returns (MessageResponse);
  rpc search(SearchAccommodationDto) returns (ListAccommodation);
  rpc findAll(Empty) returns (ListAccommodation);
}

message UserId {
  int64 userId = 1;
}

message Empty {}

message AccommodationFull {
  int64 id = 1;
  string name = 2;
  string location = 3;
  string facilities = 4;
  string photo = 5;
  int32 minGuests = 6;
  int32 maxGuests = 7;
  int32 availableBeds = 8;
  int64 accommodationGradeId = 9;
  bool isAuto = 10;
  int64 userId = 11;
}

message ListAccommodation {
  repeated AccommodationFull accommodations = 1;
}

message SearchAccommodationDto {
  string location = 1;
  int32 startYear = 2;
  int32 startMonth = 3;
  int32 startDay = 4;
  int32 endYear = 5;
  int32 endMonth = 6;
  int32 endDay = 7;
  int32 guestCount = 8;
}
